--- a/tsconfig.json
+++ b/tsconfig.json
@@ -107,6 +107,6 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
-  "include": ["backend/src/**/*.ts", "jobs/src/**/*.ts"],
+  "include": ["backend/src/**/*.ts", "jobs/src/**/*.ts", "libs/prisma/client/**/*.ts"],
   "exclude": ["node_modules"]
 }
