--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^8.15.0",
     "@prisma/client": "^5.19.1",
+    "@types/aws-lambda": "^8.10.145",
     "bcrypt": "^5.1.1"
   }
 }
