--- a/biome.json
+++ b/biome.json
@@ -1,14 +1,5 @@
 {
   "$schema": "https://biomejs.dev/schemas/1.9.2/schema.json",
-  "vcs": {
-    "enabled": false,
-    "clientKind": "git",
-    "useIgnoreFile": false
-  },
-  "files": {
-    "ignoreUnknown": false,
-    "ignore": []
-  },
   "formatter": {
     "enabled": true,
     "lineWidth": 120,
@@ -16,7 +7,8 @@
     "indentWidth": 2,
     "ignore": [
       "libs/generated/**",
-      "prisma/**"
+      "prisma/migrations/**",
+      "prisma/schema.prisma"
     ]
   },
   "organizeImports": {
@@ -29,7 +21,8 @@
     },
     "ignore": [
       "libs/generated/**",
-      "prisma/**"
+      "prisma/migrations/**",
+      "prisma/schema.prisma"
     ]
   },
   "javascript": {
